--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.5",
     "@reduxjs/toolkit": "^2.7.0",
+    "@stripe/stripe-js": "^7.8.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
